Changes (view) in writeAlgoDemo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li>Площадь квадрата</li>
         <li>Площадь прямоугольника</li>
     </ul>
+    <script>
+        writeAlgoDemo();
+    </script>
 </body>
 
 </html>
