--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>Площадь прямоугольника</li>
     </ul>
     <script>
-        writeAlgoDemo();
+        writeAlgoDemo1();
+        writeAlgoDemo2();
     </script>
 </body>
 
